test/tests/stages/13_floating-point_numbers/invalid_types/extra_credit/switch_on_double.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  int
  identifier(main)
  (
  void
  )
  {
  double
  identifier(d)
  =
  const int(10)
  ;
  switch
  (
  identifier(d)
  )
  {
  case
  const int(10)
  :
  return
  const int(0)
  ;
  }
  return
  const int(1)
  ;
  }
